[project]
name = "ragfrontent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "langchain-pinecone>=0.2.13",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.7",
    "langgraph-checkpoint-postgres>=3.0.3",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "pinecone<=8.0.1",
    "pypdf>=6.7.0",
    "streamlit>=1.53.1",
    "streamlit-mic-recorder>=0.0.8",
]
